# internal/dto/returns_dto.go
@@ -1,5 +1,9 @@
 package dto
 
-type MessageDTO struct {
-	Message string `json:"string"`
+type MessageResponseDTO struct {
+	Message string `json:"message"`
+}
+
+type ErrorResponseDTO struct {
+	Error string `json:"error"`
 }
